fix: Fix code format
Signed-off-by: Sun Yuhan <sunyuhan1998@users.noreply.github.com>